@@ -56,6 +56,9 @@ struct schedtune {
 	/* Hint to bias scheduling of tasks on that SchedTune CGroup
 	 * towards idle CPUs */
 	int prefer_idle;
+
+	/* Task will be scheduled on the CPU with the highest spare capacity */
+	int crucial;
 };
 
 static inline struct schedtune *css_st(struct cgroup_subsys_state *css)
@@ -92,6 +95,7 @@ root_schedtune = {
 	.colocate_update_disabled = false,
 #endif
 	.prefer_idle = 0,
+	.crucial = 0,
 };
 
 /*
@@ -584,6 +588,23 @@ int schedtune_prefer_idle(struct task_struct *p)
 	return prefer_idle;
 }
 
+int schedtune_crucial(struct task_struct *p)
+{
+	struct schedtune *st;
+	int crucial;
+
+	if (unlikely(!schedtune_initialized))
+		return 0;
+
+	/* Get crucial value */
+	rcu_read_lock();
+	st = task_schedtune(p);
+	crucial = st->crucial;
+	rcu_read_unlock();
+
+	return crucial;
+}
+
 static u64
 prefer_idle_read(struct cgroup_subsys_state *css, struct cftype *cft)
 {
@@ -598,6 +619,24 @@ prefer_idle_write(struct cgroup_subsys_state *css, struct cftype *cft,
 {
 	struct schedtune *st = css_st(css);
 	st->prefer_idle = !!prefer_idle;
+
+	return 0;
+}
+
+static u64
+crucial_read(struct cgroup_subsys_state *css, struct cftype *cft)
+{
+	struct schedtune *st = css_st(css);
+
+	return st->crucial;
+}
+
+static int
+crucial_write(struct cgroup_subsys_state *css, struct cftype *cft,
+	    u64 crucial)
+{
+	struct schedtune *st = css_st(css);
+	st->crucial = !!crucial;
 
 	return 0;
 }
@@ -672,6 +711,11 @@ static struct cftype files[] = {
 		.name = "prefer_idle",
 		.read_u64 = prefer_idle_read,
 		.write_u64 = prefer_idle_write,
+	},
+	{
+		.name = "crucial",
+		.read_u64 = crucial_read,
+		.write_u64 = crucial_write,
 	},
 	{ }	/* terminate */
 };
