@@ -268,7 +268,8 @@ cmd_gzip = (cat $(filter-out FORCE,$^) | gzip -n -f -9 > $@) || \
 
 # DTC
 # ---------------------------------------------------------------------------
-DTC ?= $(objtree)/scripts/dtc-aosp/dtc-aosp
+          #DTC ?= $(objtree)/scripts/dtc-aosp/dtc-aosp
+DTC ?= $(objtree)/scripts/dtc/dtc
 
 # Silence warnings
 DTC_FLAGS += -q
