@@ -21,8 +21,6 @@ DLKM_DIR := ./device/qcom/common/dlkm
 
 KBUILD_OPTIONS := $(RMNET_SHS_BLD_DIR)
 
-$(warning $(DLKM_DIR))
-include $(DLKM_DIR)/AndroidKernelModule.mk
 
 endif #End of Check for target
 endif #End of Check for qssi target
